# lab1

./: CMakeLists.txt  main.cpp
Brass/: Brass.cpp  Brass.h
Instrument/: Instrument.cpp  Instrument.h
Keeper/: Keeper.cpp  Keeper.h
Menu/: Menu.cpp  Menu.h
Orchestra/: Orchestra.h
Percussion/: Percussion.cpp  Percussion.h
Strings/: Strings.cpp  Strings.h
